--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,12 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file("local.properties").newDataInputStream())
+
+        buildConfigField "String", "RAPID_API_KEY", "\"${properties.getProperty("RAPID_API_KEY")}\""
+        buildConfigField "String", "RAPID_API_HOST", "\"${properties.getProperty("RAPID_API_HOST")}\""
     }
 
     buildTypes {
@@ -34,6 +40,7 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
+        buildConfig = true
         viewBinding = true
     }
 }
