--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,12 @@
 buildscript {
     repositories {
         google()
+        mavenCentral()
     }
     dependencies {
         def nav_version = "2.7.2"
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.20")
     }
 }
 plugins {
