--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,8 @@ plugins {
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
-    id'com.google.gms.google-services'
+    id 'com.google.gms.google-services'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -44,6 +45,9 @@ android {
         buildConfig = true
         viewBinding = true
     }
+    kapt {
+        correctErrorTypes true
+    }
 }
 
 dependencies {
@@ -78,6 +82,10 @@ dependencies {
     implementation("com.google.firebase:firebase-analytics")
 
     implementation "com.airbnb.android:lottie:6.5.1"
+
+    implementation "com.google.dagger:hilt-android:2.48"
+    kapt "com.google.dagger:hilt-compiler:2.48"
+    kapt "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.5.0"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
