--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,5 @@ plugins {
     id 'com.android.library' version '8.0.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
     id 'com.google.gms.google-services' version "4.4.2" apply false
+    id 'com.google.dagger.hilt.android' version '2.48' apply false
 }
